<resources>
    <string name="app_name">GestionnaireSante</string>
    <string name="title_accueil">Accueil</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_diabete">Diabete</string>
    <string name="title_poids">Poids</string>
    <string name="title_repas">Repas</string>
    <string name="title_sport">Sport</string>
    <string name="prompt_password">mot de passe</string>
    <string name="action_sign_in_short">mdp</string>
    <string name="prompt_email">login</string>
    <string name="button_login">Se connecter</string>
    <string name="txt_fragtab1">Glycémie</string>
    <string name="txt_fragtab2">Insuline</string>
    <string name="txt_chart1">Graphique 1</string>
    <string name="txt_chart2">Graphique 2</string>
    <string name="txt_chart3">Graphique 3</string>
    <string name="my_image_01">image repas</string>
    <string name="txt_fragmenu">Mes repas</string>
    <string name="txt_fragrepas">Mes plats</string>
    <string name="erasetext">supprimer</string>
    <string name="periode">Periode :</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="annuler">Annuler</string>
    <string name="choisir_une_date">Choisir une date</string>
    <string name="calculIMC">Calcul de votre I.M.C.</string>
    <string name="image_de_silhouette">Image de silhouette</string>
    <string name="entrer_votre_poids_actuel">Entrer votre poids actuel</string>
    <string name="modifier">Modifier</string>
    <string name="insert">insert</string>
    <string name="nombre_de_plats">Nombre de plats</string>
    <string name="calories">Calories :</string>
    <string name="glucides">Glucides :</string>
    <string name="nom_du_plat">Nom du plat</string>
    <string name="txt_glucide_total">Glucides totaux :</string>
    <string name="glucide_total">0000</string>
    <string name="calories_totales">0000</string>
    <string name="txt_calorie_total">Calories totales :</string>
    <string name="nbPlats">4</string>
    <string name="nb_plat_menu">Nombre de plats :</string>
    <string name="nom_du_menu">Nom du menu</string>
    <string name="avert_01">Pas assez de données enregistrées ! </string>
    <string name="avert_02">Veuillez entrer plus d\'enregistrement.</string>
    <string name="rien">rien</string>
    <string name="taper_le_nom_d_un_plat_rechercher">taper le nom d\'un plat à rechercher</string>
    <string name="entrer_un_nom_de_menu">entrer un nom pour ce repas</string>
    <string name="entrer_le_nom_pour_ce_menu">Etape 1/3 : Entrer le nom pour ce menu</string>
    <string name="choisir_une_date_menu">Etape 2/3 : Choisir une date et une periode</string>
    <string name="informations_concernant_ce_menu">Informations concernant ce menu</string>
    <string name="les_plats_composants_votre_menu">Etape 3/3 : Les plats composants votre menu</string>
    <string name="txt_aChart1">Tendances</string>
    <string name="txt_aChart2">HypoHyper</string>
    <string name="txt_alChart1">Graph 1</string>
    <string name="alChart2">Graph 2</string>
    <string name="composition_d_un_nouveau_menu">Composition d\'un nouveau menu</string>
    <string name="txt_accueilTab1">Diabete</string>
    <string name="txt_accueilTab2">Alimentation</string>
    <string name="txt_accueilTab3">â venir</string>
    <string name="profil">Profil</string>
    <string name="action_settings">Menu</string>
    <string name="nombre_d_hypoglyc_mie_et_d_hyperglyc_mie">Nombre d\'hypo. et d\'hyper.</string>
    <string name="imc">I.M.C.</string>
    <string name="voir_tout_les_repas">voir tout les repas</string>
    <string name="voir_tout_le_repas">fermer</string>
    <string name="fermer_la_fenetre">fermer la fenetre</string>
    <string name="inforamtions_concernant_le_nouveau_plat">Inforamtions concernant le nouveau plat</string>
    <string name="enregistrer_son_poids">Enregistrer son poids</string>
    <string name="enregistrer_une_glyc_mie">Enregistrer une glycémie</string>
    <string name="glyc_mie">Glycémie</string>
    <string name="novorapide">Novorapide</string>
    <string name="toujeo">Toujeo</string>
    <string name="hypoglyc_mies">Hypoglycémies</string>
    <string name="dernier_poids_enregistr">Dernier poids enregistré</string>

    <string-array name="periodes">
        <item>Petit-déjeuner</item>
        <item>Matinée</item>
        <item>Déjeuner</item>
        <item>Après-midi</item>
        <item>Dîner</item>
        <item>Soirée</item>
        <item>Nuit</item>
    </string-array>
</resources>