<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_accueil"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_accueil" />

    <item
        android:id="@+id/navigation_diabete"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_diabete" />

    <item
        android:id="@+id/navigation_poids"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_poids" />

    <item
        android:id="@+id/navigation_repas"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_repas" />
    <item
        android:id="@+id/navigation_sport"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_sport" />

</menu>