<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.repas.service.RepasDialogPlat">

    <data>

        <variable
            name="viewmodelrepas"
            type="com.example.gestionnairesante.ui.repas.vm.VmRepas" />

        <variable
            name="dialogPlat"
            type="com.example.gestionnairesante.ui.repas.service.RepasDialogPlat" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- TITRE -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingStart="20dp"
                android:text="Inforamtions concernant le nouveau plat"
                android:textSize="@dimen/taille_titre" />

            <ImageButton
                android:id="@+id/fermer_plat"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:background="@color/white"
                android:src="@drawable/ic_close" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/PrimaryColor"
            android:orientation="vertical" />

        <!-- CONFIGURATION DU PLAT -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:paddingStart="60dp"
            android:paddingEnd="60dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:text="@string/nom_du_plat"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_nomplat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:text="@string/calories"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_calories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:text="@string/glucides"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_glucide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center" />

            </LinearLayout>
        </LinearLayout>

        <!-- BOUTONS -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_savePlat"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/shape_bouton"
                android:backgroundTint="@color/SecondaryColor"
                android:text="@string/enregistrer"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_updatePlat"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/shape_bouton"
                android:backgroundTint="@color/SecondaryColor"
                android:text="@string/modifier"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</layout>