<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.poids.PoidsDialog">

    <data>

        <variable
            name="dialogPoids"
            type="com.example.gestionnairesante.ui.poids.PoidsDialog" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/shape_bouton"
            android:backgroundTint="@color/SecondaryColor"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center"
                android:text="Choisir une date"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <DatePicker
            android:id="@+id/datepicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <Spinner
            android:id="@+id/spinner_periode"
            android:layout_width="match_parent"
            android:layout_height="50dp" />


        <LinearLayout
            android:id="@+id/ll_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:calendarTextColor="@color/black"
                android:calendarViewShown="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:paddingStart="60dp"
            android:paddingEnd="60dp">

            <NumberPicker
                android:id="@+id/picker1"
                android:layout_width="50dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center" />

            <NumberPicker
                android:id="@+id/picker2"
                android:layout_width="50dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center" />

            <NumberPicker
                android:id="@+id/picker3"
                android:layout_width="50dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_insertPoids"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/shape_bouton"
                android:backgroundTint="@color/SecondaryColor"
                android:text="@string/enregistrer"
                android:textColor="@color/white"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_updatePoids"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/shape_bouton"
                android:backgroundTint="@color/SecondaryColor"
                android:text="@string/modifier"
                android:textColor="@color/white"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/shape_bouton"
                android:text="@string/annuler"
                android:textColor="#442C2E"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>
</layout>